# learn_ml_in_a_hard_way

./: .clang-format  .gitignore  .pre-commit-config.yaml  2HDM.ipynb  Python Basic.ipynb  README.md  ROOT Basic.ipynb  TimingOf-ttbarEvents.ipynb  dark_matter.py  environment.yml
.github/workflows/: deploy.yml
CPP/: CMakeLists.txt  README.md
CPP/compiler/: gccbug.cxx  gccbug2.cxx
CPP/src/: CMakeLists.txt
CPP/src/pybinding/: CMakeLists.txt  pybind11.cxx  test.py
CPP/src/test/: CMakeLists.txt  array.cxx  basedir.cxx  binding.cxx  derivation.cxx  eva_BW.cxx  forward.cxx  frnn.cxx  inheritage.cxx  lambda.cxx  lock_guard_eg.cxx  mutex_eg.cxx  parameter_pack.cxx  queue.cxx  random.cxx  read_csv.cxx  read_graphviz.cxx  singleton.cxx  smart_ptr.cxx  template.cxx  test_address_lamdba.cxx  test_address_lamdba.h  test_eigen.cpp  test_number.cxx  test_reverse_vector.cxx  test_set_point.cxx  test_sprintf.cxx  test_struct.cxx  test_type1.h  test_volatile.cxx  test_wcc.cpp  tuple.cxx  type_collector.h  variadic_predefined_marco.cxx  variant.cxx  walk_through.cxx
CUDA/: REAME.md  async_pthreads  async_pthreads.cu
HEP/: ExaTrkX-as-a-service.ipynb  hadronic interactions.ipynb  utils.py
MPI/: README.md  cpi.py  dynamic.py  helloworld.c  helloworld.h  helloworld.i  helloworld.py  helloworld_wrap.c  read_root_mt.py  read_root_mt2.py  read_root_mt_mpi.py  reduce.py  scatter.py  setup.py
MPI/python/: cpi.py  scatter2.py
MPI/src/: CMakeLists.txt
MPI/src/test/: helloworld.cxx
MachineLearning/: test_aggregation.ipynb
NeuralTransfer/: neural_style_tutorial.py
NeutralTransfer/: README.md
Numpy/: Activate Functions.ipynb  Basics.ipynb  Fit A Line.ipynb  Migration Matrix.ipynb  Untitled.ipynb  line_fit.eps  networkX.ipynb  p0_demo.eps
OpenMP/: CMakeLists.txt  README.md
OpenMP/src/: CMakeLists.txt
OpenMP/src/test/: CMakeLists.txt  hello_world.cxx  pi.cxx  pi2.cxx  pi3.cxx
ParameterEstimate_and_Classification/: Lecture.ipynb  Polynomial Fit.ipynb
Professor/: Gaussian Process.ipynb  Objective Function for Prof Tuning.ipynb  Surrogate Function.ipynb  poly_func.py
PyTorchBasic/: Basic Operations.ipynb
Python/: check_acorn.py  color_text.py  eg_absl.py  eg_colorama.py  ex_threading.py  ex_tqdm.py  ganged_plots.py  higgsml_test_output_format.py  images.py  mg5_mt_mpi.py  mt_array.py  mt_function.py  mt_function_nomt.py  read_h5py_to_networkx.py  requirements.txt  save_networkx_to_h5py.py  test_cuknn.py  test_flask.py  test_nx_h5py.hdf5
Python/decorators/: decorators.py  simple.py
Python/notebooks/: histogram_tokenizer.ipynb  zenodo_api.ipynb
ROOT/AnalysisExample/NonPointingPhoton/: Makefile  config_makehists.yaml  event_selection.cxx  event_selection_RDataFrame.cxx  event_selection_RNtuple.cxx  event_selection_cache.cxx  event_selection_off_branch.cxx  peek_root.py  tree2histo_gpu  tree2histo_uproot  tree2histo_uproot_ray  tree2histo_uproot_ray_gpu
ROOT/IOTest/: Makefile  Makefile.bak  log.make  make.sh  merge_BDT  merge_BDT.cxx  testH5ROOT.cpp  testHDF5ROOT.cxx
ROOT/RooHistPDF/: Makefile  final_test.cxx  final_test2.cxx  make.sh  roodatahist.cxx  roohistpdf.cxx  rooplot.cxx  sanity_check.cxx  testVariousBinning.cxx
ROOT/VariousBinning/: test.py  testVariousBinning.cxx
ReinforcementLearning/: reinforcement_q_learning.ipynb
TrackPerformance/: ParseAthenaLog.ipynb  RDO_PerMonSD-2000Evts.ipynb  RDO_PerMonSD-500Evts.ipynb  RDO_PerMonSD.ipynb
book/: _config.yml  intro.md
tbb/: CMakeLists.txt
tbb/src/test/: CMakeLists.txt  tbb_arena.cxx
