# some excutables
file(GLOB tools *.cxx)
foreach(target ${tools})
	# message(${target})
	get_filename_component(execname ${target} NAME_WE)
	get_filename_component(srcfile ${target} NAME)
	add_executable(${execname} ${srcfile})
	#add_dependencies(${execname})
	set_target_properties(${execname} PROPERTIES LINKER_LANGUAGE CXX)
	target_link_libraries(${execname} PUBLIC pthread)
endforeach()

find_package(Boost REQUIRED COMPONENTS graph)
message(STATUS "Boost Libaries: ${Boost_LIBRARIES}")
add_executable(test_wcc test_wcc.cpp)
set_target_properties(test_wcc PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(test_wcc PUBLIC Boost::graph)